--- a/app/css/style.css
+++ b/app/css/style.css
@@ -16,9 +16,13 @@ img.item  {
 }
 
 .product {
-    border: 1px solid black;
+    border: 1px solid grey;
     height: 85%;
     max-height: 200px;
+    margin: 4px;
+}
+.table-responsive {
+        overflow-x: auto;
 }
 
 .item {
@@ -37,3 +41,19 @@ img.item  {
     bottom: 10%;
     margin-top: 10%;
 }
+
+
+div#products {
+    margin-bottom: 30%
+}
+
+tr {
+    background-color: grey;
+}
+
+
+@media (max-width: 600px) {
+    #shopping-cart {
+    }
+}
+
